# sci-modeling-bench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/figure_sources/bio/: README.md  build_bio_overview.py
assets/figure_sources/computational_systems/: README.md  build_computational_systems_overview.py
assets/figure_sources/materials/: README.md  build_materials_overview.py  build_materials_overview_v2.py  build_materials_overview_v3_rect.py
assets/figure_sources/overview/: README.md  build_benchmark_task_montage.py  build_benchmark_task_montage_v2.py
assets/references/computational-systems/: README.md
constraints/: hopper-sim.txt
docs/: README.md  datasets.md  objectives-and-protocols.md  tfbind8.md
docs/api/: README.md  cache.md  dataset.md  objective.md  protocol.md  task.md
docs/architecture/: core-concepts.md
docs/development/: releasing.md
docs/metrics/: candidate-submission-metrics.md
docs/suites/design-bench/: README.md  cell-dag-nas.md  drugmatrix.md  gfp.md  hopper-controller.md  migration-and-coverage.md  superconductor.md  tfbind10-pho4.md  tfbind8.md  utr-mrl.md
src/sci_modeling_bench/: __init__.py  cache.py  exceptions.py
src/sci_modeling_bench/dataset/: __init__.py  _hub.py  dataset.py  knowledge.py  manifest.py  metadata.py  schema.py  source.py  validation.py
src/sci_modeling_bench/objective/: __init__.py  objective.py
src/sci_modeling_bench/protocol/: __init__.py  agent_input.py  protocol.py
src/sci_modeling_bench/resources/knowledge/shared/: basic-helix-loop-helix-and-ebox-recognition.md  binding-affinity-and-thermodynamics.md  binding-energy-topography-by-sequencing.md  binding-sites-motifs-and-sequence-context.md  cell-based-convolutional-neural-networks.md  chemical-composition-stoichiometry-and-formulas.md  cifar10-image-classification.md  composition-derived-material-descriptors.md  composition-structure-phase-and-processing.md  continuous-control-and-gaussian-policies.md  convolutional-feature-maps-kernels-and-receptive-fields.md  creatinine-and-renal-function.md  directed-acyclic-computation-graphs-and-graph-isomorphism.md  dna-structure-and-base-pairing.md  elemental-properties-and-periodic-trends.md  erythrocyte-indices-mch-and-mchc.md  eukaryotic-mrna-and-translation-initiation.md  feedforward-neural-policy-parameterization.md  five-prime-utr-regulatory-elements.md  flow-cytometry-and-barcode-linked-fluorescence-measurement.md  fluorescence-photophysics-and-brightness.md  kozak-context-and-start-codon-recognition.md  (+22 more)
src/sci_modeling_bench/suites/: __init__.py
src/sci_modeling_bench/suites/design_bench/: __init__.py  black_box_optimization.py
src/sci_modeling_bench/task/: __init__.py  evaluation.py  ordered_candidate.py  task.py
tests/: __init__.py  conftest.py  test_cache.py  test_dataset.py  test_hub.py  test_knowledge.py  test_manifest.py  test_objective.py  test_source.py  test_validation.py
tests/suites/: __init__.py
tests/suites/design_bench/: __init__.py  test_agent_input_manifest.py  test_task_defaults.py
tests/suites/design_bench/cell_dag_nas/: __init__.py  conftest.py  test_build.py  test_graph.py  test_objective_protocol.py  test_task.py
tests/suites/design_bench/drugmatrix/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_protocol_objective.py  test_task.py
tests/suites/design_bench/gfp/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_protocol_objective.py  test_sequence.py  test_task.py
tests/suites/design_bench/hopper_controller/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_protocol_objective.py  test_simulator.py  test_task.py
tests/suites/design_bench/superconductor/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_protocol_objective.py  test_task.py
tests/suites/design_bench/tfbind10_pho4/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_objective_protocol.py  test_task.py
tests/suites/design_bench/tfbind8/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_objective.py  test_protocol.py  test_task.py
tests/suites/design_bench/utr_mrl/: __init__.py  conftest.py  test_build.py  test_dataset.py  test_protocol_objective.py  test_sequence.py  test_task.py
(+62 files in other folders)
