[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-modeling-bench"
version = "0.7.0"
description = "An observation-grounded benchmark framework for scientific modeling and design."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "SciModelingBench contributors" },
]
keywords = [
  "agent",
  "benchmark",
  "black-box-optimization",
  "scientific-machine-learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "datasets>=3.1",
  "huggingface-hub>=0.26",
  "numpy>=1.26",
  "pydantic>=2.10",
  "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5.1",
]
data-build = [
  "openpyxl>=3.1",
  "protobuf>=4",
  "rdkit>=2024.3",
]
hopper-sim = [
  "gymnasium[mujoco]>=1.3,<1.4",
]

[project.urls]
Homepage = "https://github.com/xukp20/sci-modeling-bench"
Documentation = "https://github.com/xukp20/sci-modeling-bench/tree/main/docs"
Repository = "https://github.com/xukp20/sci-modeling-bench.git"
Issues = "https://github.com/xukp20/sci-modeling-bench/issues"
Changelog = "https://github.com/xukp20/sci-modeling-bench/blob/main/CHANGELOG.md"

[project.scripts]
smb-build-tfbind8 = "sci_modeling_bench.suites.design_bench.tfbind8.build:main"
smb-build-tfbind10-pho4 = "sci_modeling_bench.suites.design_bench.tfbind10_pho4.build:main"
smb-build-cell-dag-nas = "sci_modeling_bench.suites.design_bench.cell_dag_nas.build:main"
smb-build-superconductor = "sci_modeling_bench.suites.design_bench.superconductor.build:main"
smb-build-hopper-controller = "sci_modeling_bench.suites.design_bench.hopper_controller.build:main"
smb-build-utr-mrl = "sci_modeling_bench.suites.design_bench.utr_mrl.build:main"
smb-build-gfp = "sci_modeling_bench.suites.design_bench.gfp.build:main"
smb-build-drugmatrix = "sci_modeling_bench.suites.design_bench.drugmatrix.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sci_modeling_bench = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require external data artifacts",
]
